[gd_scene load_steps=2 format=3 uid="uid://duda2y4tsd7ww"]

[ext_resource type="Script" path="res://game/menu/options/audio_slider.gd" id="1_omdm0"]

[node name="AudioSlider" type="HBoxContainer"]
process_mode = 3
script = ExtResource("1_omdm0")

[node name="BusNameLabel" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Bus Name"
horizontal_alignment = 2

[node name="VolumeSlider" type="HSlider" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 1

[node name="VolumeLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "100"
